# aocode-rs

./: Cargo.toml
src/: graph.rs  lib.rs  main.rs  math.rs
src/problems/: mod.rs
src/problems/year2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
src/problems/year2016/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
src/problems/year2017/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
src/problems/year2018/: day01.rs  day02.rs  day03.rs  day05.rs  day06.rs  day08.rs  day12.rs  mod.rs
src/problems/year2019/: day01.rs  day02.rs  day03.rs  day04.rs  mod.rs
src/problems/year2020/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day08.rs  day09.rs  day17.rs  mod.rs
src/problems/year2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day09.rs  day10.rs  mod.rs
src/problems/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  (+6 more)
tests/: 2025.rs  runner.rs
(+29 files in other folders)
