[package]
name = "aocode"
description = "Advent of Code solutions in Rust"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Mamić <antoniomamic007@gmail.com>"]
include = [
    "src/",
    "Cargo.toml",
    "LICENSE.md",
    "README.md",
]

[profile.release]
lto = true

[profile.test]
opt-level = 3

[dependencies]
advent-of-code-ocr = "0.1.1"
clap = { version = "4.5.48", features = ["cargo"], optional = true }
itertools = "0.14.0"
md-5 = "0.10.6"
ndlife = "0.1.0"
pmath = "0.1.0"
regex = "1.11.2"
serde_json = "1.0.145"
smallvec = "1.15.1"

[target.wasm32-unknown-unknown.dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Performance", "Window"] }

[features]
default = []
cli = ["clap"]

[lib]
name = "aocode"
path = "src/lib.rs"

[[bin]]
name = "aocode"
path = "src/main.rs"
required-features = ["cli"]
